Fixing layout issue with inactive state of mobile slider
git-svn-id: https://plugins.svn.wordpress.org/wripl/trunk@691134 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -150,8 +150,12 @@ img.wripl-rotate {
     z-index: 100;
 }
 
+/* Tricky positioning of the 'get recommendations' button within this element */
 #wripl-slider .slider-body.wripl-mobile {
-    padding-top: 14px;
+    padding-top: 16px;
+    padding-left: 15%;
+    width: 65%;
+    float: left;
 }
 
 #wripl-recommendations.wripl-mobile {
